# historia-wallet

./: README.md  build.gradle
common/src/main/res/values/: .values.xml.swp  colors.xml  values.xml
gradle/wrapper/: gradle-wrapper.properties
integration-android/src/de/schildbach/wallet/integration/android/: BitcoinIntegration.java
market/: market-promo-text.txt
uphold-integration/src/main/res/drawable/: ic_dash_d_white_bottom.xml
wallet/: AndroidManifest.xml  build.gradle
wallet/cpp/: CMakeLists.txt  hashblock.cpp  hashblock.h  test.cpp
wallet/res/drawable/: ic_qrcode.xml
wallet/res/layout/: address_book_onepane.xml  address_book_row.xml  block_list_fragment.xml  block_row_transaction.xml  exchange_rate_row.xml  ext_app_bar_layout.xml  masternode_fragment.xml  nav_header_main.xml  navigation_layout.xml  network_monitor_onepane.xml  peer_list_fragment.xml  peer_list_row.xml  request_coins_form_include.xml  send_coins_content.xml  send_coins_fragment.xml  sweep_wallet_fragment.xml  transaction_row.xml  wallet_actions_fragment.xml  wallet_activity_onepane_vertical.xml  wallet_balance_fragment.xml  wallet_balance_toolbar_fragment.xml  wallet_transactions_fragment.xml
wallet/res/menu/: main_drawer.xml
wallet/res/values/: strings-extra.xml  strings.xml  strings_help.xml
wallet/res/xml/: preference_about.xml
wallet/src/de/schildbach/wallet/service/: BlockchainServiceImpl.java
wallet/src/de/schildbach/wallet/ui/: ExtAppBarLayout.java  WalletActivity.java  WalletBalanceToolbarFragment.java
(+1 files in other folders)
